- increased MaxPermSize to 128MB
git-svn-id: https://harrison.its-technidata.de:444/svn/ingrid/ingrid-iplug-se/trunk@14851 d5cb13e6-57fc-0310-9ab5-ddaedd36d86d